--- a/style.css
+++ b/style.css
@@ -5,6 +5,20 @@
     font-family: 'Inter', sans-serif;
 }
 
+.bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    display: block;
+    content: "";
+    width: 100%;
+    height: 245px;
+    background-color: #20222F;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
 body {
     max-width: 1440px;
     margin: 36px auto 0;
@@ -47,8 +61,6 @@ h1 {
 
 .overview_main {
     margin-top: 46px;
-    /* display: flex; */
-    /* justify-content: space-between; */
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 30px;
@@ -213,4 +225,54 @@ h1 {
 .summary {
     font-size: 32px;
     font-weight: 700;
+}
+
+@media(max-width:420px) {
+
+    body {
+        max-width: 375px;
+    }
+
+    header {
+        flex-direction: column;
+    }
+
+    .title {
+        padding-bottom: 25px;
+        margin-bottom: 16px;
+        border-bottom: 1px solid #333A55;
+    }
+
+    .switcher {
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    h1 {
+        font-size: 24px;
+        line-height: 34px;
+    }
+
+    .social:hover {
+        pointer-events: none;
+    }
+
+    .overview_main {
+        margin-top: 40px;
+        grid-template-columns: 1fr;
+        grid-gap: 24px;
+    }
+
+
+
+    .overview_today {
+        grid-template-columns: 1fr;
+        grid-gap: 16px;
+    }
+
+
+
+    .overview_item:hover {
+        pointer-events: none;
+    }
 }
